--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </header>
   <h2 class="text-center mt-4">BIENVENID@ </h2>
   <div class="container my-5">
-    <p>Gracias por visitar mi página. Mi nombre es Raquel y soy (casi) Técnico Superior en Desarrollo de Aplicaciones Web. Actualmente busco una empresa donde realizar la Formación en Centros de Tabajo. All over the box nace como una carta de presentación al exterior, ya que al terminar el curso no le veía mucho sentido a contactar a una empresa y no tener nada más que mostrarle que mi currículum. Si has llegado hasta aquí, probablemente yo misma te haya contactado previamente. Te invito a que visites las secciones <b> The box</b>, donde explico el porqué de la caja y <b>Conóceme un poco más</b>, donde prodrás ver mi historia personal y cómo he acabado en el mundo de la programación.</p>
+    <p>Gracias por visitar mi página. Mi nombre es Raquel y soy (casi) Técnico Superior en Desarrollo de Aplicaciones Web. Actualmente busco una empresa donde realizar la Formación en Centros de Tabajo. All over the box nace como una carta de presentación al exterior, ya que al terminar el curso no le veía mucho sentido a contactar a una empresa y no tener nada más que mostrarle que mi currículum. Si has llegado hasta aquí, probablemente yo misma te haya contactado previamente. Te invito a que visites las secciones <b> The box</b>, donde explico el porqué de la caja y <b>Conóceme un poco más</b>, donde podrás ver mi historia personal y cómo he acabado en el mundo de la programación.</p>
   </div>
   <section>
     <div class="card-deck  mx-5 " >
