--- a/the_box.html
+++ b/the_box.html
@@ -65,7 +65,7 @@
   <footer >
     <div class="container-fluid mb-0 mt-5  py-5 bg-dark text-white" >
         <div class="float-left mr-5">
-          <p><a class="text-white" href="https://linkedin.com/in/raquel-patiño-rodriguez-7460aa248"><i class='fab fa-linkedin' style='font-size:26px'></i></a></p>
+          <p><a target="blank" class="text-white" href="https://linkedin.com/in/raquel-patiño-rodriguez-7460aa248"><i class='fab fa-linkedin' style='font-size:26px'></i></a></p>
           <p ><i class="far fa-envelope-open" style='font-size:24px'></i><a class="text-white" href="mailto:alloverthebox@outlook.es"> alloverthebox@outlook.es</a></p>
        </div>
        <div id="map" class="container-sm" style="height: 280px; "></div>
